FIxed navigation bar on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -23,13 +23,14 @@ body {
 nav ul { display: block; }
 nav ul li {
   display: inline-block;
-  padding: 2vh;
+  padding: 1vw;
   list-style-type: none;
   letter-spacing: 1px;
 }
 nav ul li a {
   color: inherit;
   text-decoration: none;
+  font-size: 1em;
 }
 
 .title { font-size: 10vh; }
@@ -41,8 +42,8 @@ nav ul li a {
 .third-title { font-size: 4vh; }
 
 #header {
-  padding: 2vh;
-  margin: 10vh;
+  padding: 1vw;
+  margin: 5vw;
 }
 
 #footer {
